# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GenerateSolution.bat  README.md  premake5.lua
engine/: CMakeLists.txt
engine/includes/: prevengine.h
engine/src/: application.cpp  application.h  enginepch.h
engine/src/api/directx/: directxbuffer.cpp  directxbuffer.h  directxcontext.cpp  directxcontext.h  directxframebuffer.cpp  directxframebuffer.h  directxhelper.h  directxrenderstate.cpp  directxrenderstate.h  directxshader.cpp  directxshader.h  directxtexture.cpp  directxtexture.h  directxvertexarray.cpp  directxvertexarray.h
engine/src/api/glfw/: glfwwindow.cpp  glfwwindow.h
engine/src/api/opengl/: openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglframebuffer.cpp  openglframebuffer.h  openglrenderstate.cpp  openglrenderstate.h  openglshader.cpp  openglshader.h  opengltexture.cpp  opengltexture.h  openglvertexarray.cpp  openglvertexarray.h
engine/src/common/: assert.h  handledobject.h  log.h  singleton.h  stronghandle.h  types.h
engine/src/core/: input.cpp  input.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  logger.h  pvkeycodes.h  timer.cpp  timer.h  window.h
engine/src/debug/: instrumentor.cpp  instrumentor.h
engine/src/events/: applicationevent.h  event.h  keyevent.h  mouseevent.h
engine/src/graphics/: buffer.cpp  buffer.h  bufferlayout.cpp  bufferlayout.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  graphicscontext.cpp  graphicscontext.h  helper.h  renderstate.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
engine/src/imgui/: imgui.cpp  imgui.h  imguimanager.cpp  imguimanager.h  imguiwindow.cpp  imguiwindow.h
engine/src/luabind/: bindcorelib.cpp  bindcorelib.h  bindgraphicslib.cpp  bindgraphicslib.h  bindimguilib.cpp  bindimguilib.h  bindmath.cpp  bindmath.h  bindsystemlib.cpp  bindsystemlib.h  luabind.h  luatypes.cpp  luatypes.h
engine/src/math/: math.h  matrixstack.h  mvpstack.h
engine/src/memory/: memory.cpp  memory.h  memoryleak.h
engine/src/platform/unix/: unixlogger.cpp
engine/src/platform/win32/: win32logger.cpp  win32timer.cpp
engine/src/renderer/: batcher.cpp  batcher.h  batcherRendererShaders.inl  batcherShaders.inl  fboshaders.inl  immgfx.cpp  immgfx.h  orthocamera.cpp  orthocamera.h  renderer2d.cpp  renderer2d.h  shaders.inl
engine/src/utils/: datafile.cpp  datafile.h  fileutils.h  path.cpp  path.h  prevstring.h
engine/src/virtualmachine/: config.h  lua.hpp  virtualmachine.cpp  virtualmachine.h  vmlogger.h
res/scripts/: config.lua  main.lua
sandbox/: .gitignore  CMakeLists.txt
sandbox/src/: boidsdemo.h  main.cpp
